--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,7 +102,7 @@ android {
         applicationId "com.kunaticker"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 2
         versionName "1.4.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -158,6 +158,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     compile project(':react-native-languages')
     compile project(':react-native-svg')
     compile project(':react-native-splash-screen')
