--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,4 +9,6 @@ pod 'Firebase/AdMob', '~> 5.3.0'
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
 end
