--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "lodash": "4.17.10",
         "mobx": "5.8.0",
         "mobx-react": "5.4.3",
-        "moment": "^2.23.0",
+        "moment": "2.23.0",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.4.1",
@@ -33,7 +33,7 @@
         "react-native-crypto": "2.1.2",
         "react-native-device-info": "0.22.4",
         "react-native-firebase": "5.0.0",
-        "react-native-keyboard-aware-scroll-view": "^0.8.0",
+        "react-native-gesture-handler": "1.0.15",
         "react-native-languages": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
         "react-native-randombytes": "3.5.1",
