--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-native-splash-screen": "3.1.1",
         "react-native-super-grid": "2.4.3",
         "react-native-svg": "6.5.2",
+        "react-native-svg-charts": "5.2.0",
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.3.0",
         "react-navigation": "2.12.1",
@@ -61,6 +62,7 @@
         "@types/numeral": "0.0.25",
         "@types/react": "16.4.11",
         "@types/react-native": "0.56.24",
+        "@types/react-native-svg-charts": "5.0.1",
         "@types/react-native-tab-view": "1.0.2",
         "@types/react-navigation": "2.0.19",
         "@types/react-redux": "6.0.6",
