--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,12 @@ pod 'Firebase/AdMob', '~> 5.3.0'
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks
-  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+end
 
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    if target.name == "React"
+      target.remove_from_project
+    end
+  end
 end
