--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native-languages": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
         "react-native-randombytes": "3.5.1",
+        "react-native-rate": "^1.1.6",
         "react-native-splash-screen": "3.1.1",
         "react-native-super-grid": "2.4.3",
         "react-native-svg": "6.5.2",
