--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'KunaTicker' do
   # use_frameworks
   pod 'react-native-directed-scrollview', :path => '../node_modules/react-native-directed-scrollview'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
 
 post_install do |installer|
