--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "react-native": "0.56.1",
         "react-native-crypto": "2.1.2",
         "react-native-device-info": "0.22.4",
-        "react-native-directed-scrollview": "^2.0.0",
+        "react-native-directed-scrollview": "2.0.0",
         "react-native-firebase": "5.2.2",
         "react-native-gesture-handler": "1.0.15",
         "react-native-languages": "3.0.1",
@@ -45,6 +45,7 @@
         "react-native-svg-charts": "5.2.0",
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.3.0",
+        "react-native-vector-icons": "6.3.0",
         "react-navigation": "2.12.1",
         "react-redux": "5.0.7",
         "react-router": "4.3.1",
@@ -66,6 +67,7 @@
         "@types/react-native": "0.56.24",
         "@types/react-native-svg-charts": "5.0.1",
         "@types/react-native-tab-view": "1.0.2",
+        "@types/react-native-vector-icons": "^4.6.4",
         "@types/react-navigation": "2.0.19",
         "@types/react-redux": "6.0.6",
         "@types/react-router-native": "4.2.3",
