--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: "com.android.application"
 apply plugin: "com.google.gms.google-services"
+apply plugin: "com.google.firebase.firebase-perf"
+apply plugin: "io.fabric"
+
 
 import com.android.build.OutputFile
 
@@ -74,10 +77,20 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js"
+        entryFile: "index.js"
+]
+
+project.ext.vectoricons = [
+        iconFontNames: [
+                'MaterialIcons.ttf',
+                'EvilIcons.ttf',
+                'FontAwesome.ttf',
+                'FontAwesome5.ttf'
+        ]
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -146,7 +159,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -158,29 +171,28 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-directed-scrollview')
-    compile project(':react-native-gesture-handler')
-    compile project(':react-native-languages')
-    compile project(':react-native-svg')
-    compile project(':react-native-splash-screen')
-    compile project(':react-native-randombytes')
-    compile project(':react-native-firebase')
-    compile project(':react-native-device-info')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-languages')
+    implementation project(':react-native-svg')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-splash-screen')
     implementation project(':react-native-randombytes')
     implementation project(':react-native-firebase')
-    implementation project(':react-native-svg')
     implementation project(':react-native-device-info')
-    implementation project(':react-native-splash-screen')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+        transitive = true
+    }
 
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.google.android.gms:play-services-base:16.0.1"
     implementation "com.google.firebase:firebase-core:16.0.6"
+    implementation "com.google.firebase:firebase-perf:16.0.0"
     implementation "com.google.firebase:firebase-config:16.1.2"
+    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
     implementation "com.google.firebase:firebase-ads:16.0.1"
 }
 
