--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "axios": "0.18.0",
         "bignumber.js": "8.0.1",
+        "cryptocurrency-icons": "^0.10.1",
         "formik": "1.4.2",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.6",
