--- a/ios/KunaTicker/Info.plist
+++ b/ios/KunaTicker/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleGetInfoString</key>
-	<string/>
+	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -40,16 +40,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>tt_norms_black.otf</string>
-		<string>tt_norms_bold.otf</string>
-		<string>tt_norms_extrabold.otf</string>
-		<string>tt_norms_heavy.otf</string>
-		<string>tt_norms_light.otf</string>
-		<string>tt_norms_medium.otf</string>
-		<string>tt_norms_regular.otf</string>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
@@ -65,6 +58,10 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>tt_norms_pro_black.otf</string>
+		<string>tt_norms_pro_bold.otf</string>
+		<string>tt_norms_pro_medium.otf</string>
+		<string>tt_norms_pro_regular.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
