--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "make-third-party:2": "cd ./node_modules/react-native/scripts/third-party/glog-0.3.4 && ./configure && make && make install",
         "make-third-party": "npm run make-third-party:1 && npm run make-third-party:2",
         "configure-app": "npm install && react-native link && npm run make-third-party",
-        "postversion": "react-native-version"
+        "postversion": "react-native-version",
+        "postinstall": "rn-nodeify --install stream-browserify,react-native-crypto,events,vm-browserify,process --hack"
     },
     "dependencies": {
         "axios": "0.18.0",
@@ -30,22 +31,23 @@
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.8.3",
-        "react-native": "0.56.1",
+        "react-native": "0.59.5",
         "react-native-crypto": "2.1.2",
-        "react-native-device-info": "0.22.4",
+        "react-native-device-info": "1.5.0",
         "react-native-firebase": "5.2.2",
-        "react-native-gesture-handler": "1.0.15",
+        "react-native-gesture-handler": "1.1.0",
         "react-native-languages": "3.0.1",
+        "react-native-level-fs": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
-        "react-native-randombytes": "3.5.1",
-        "react-native-rate": "^1.1.6",
+        "react-native-randombytes": "3.5.2",
+        "react-native-rate": "1.1.6",
         "react-native-splash-screen": "3.1.1",
         "react-native-super-grid": "2.4.3",
         "react-native-svg": "6.5.2",
         "react-native-svg-charts": "5.2.0",
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.3.0",
-        "react-native-vector-icons": "6.3.0",
+        "react-native-vector-icons": "6.4.2",
         "react-navigation": "2.12.1",
         "react-redux": "5.0.7",
         "react-router": "4.3.1",
@@ -53,34 +55,41 @@
         "recompose": "0.28.2",
         "recyclerlistview": "1.3.4",
         "redux": "4.0.0",
+        "rn-nodeify": "10.0.1",
         "sjcl": "1.0.8",
+        "stream-browserify": "1.0.0",
         "vm-browserify": "1.1.0",
-        "yup": "0.26.7"
+        "yup": "0.27.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-decorators": "7.2.3",
+        "@babel/plugin-transform-runtime": "7.4.3",
+        "@babel/runtime": "7.4.3",
         "@types/es6-promise": "3.3.0",
         "@types/i18n-js": "3.0.1",
         "@types/lodash": "4.14.116",
         "@types/numeral": "0.0.25",
         "@types/react": "16.8.4",
-        "@types/react-native": "0.56.24",
+        "@types/react-native": "0.57.47",
         "@types/react-native-svg-charts": "5.0.1",
         "@types/react-native-tab-view": "1.0.2",
-        "@types/react-native-vector-icons": "^4.6.4",
+        "@types/react-native-vector-icons": "6.4.0",
         "@types/react-navigation": "2.0.19",
         "@types/react-redux": "6.0.6",
-        "@types/react-router-native": "4.2.3",
+        "@types/react-router-native": "4.2.4",
         "@types/recompose": "0.26.4",
         "@types/redux": "3.6.0",
         "@types/sjcl": "1.0.28",
         "@types/yup": "0.26.4",
         "babel-jest": "23.4.2",
         "babel-plugin-module-alias": "1.6.0",
+        "babel-plugin-module-resolver": "3.2.0",
+        "babel-plugin-transform-remove-console": "^6.9.4",
         "babel-preset-react-native": "5.0.2",
-        "jest": "23.5.0",
+        "jest": "^24.7.1",
         "jsc-android": "236355.1.1",
-        "metro-react-native-babel-preset": "0.47.0",
+        "metro-react-native-babel-preset": "^0.53.1",
+        "react-native-mock-render": "^0.1.2",
         "react-native-typescript-transformer": "1.2.10",
         "react-native-version": "2.6.6",
         "react-test-renderer": "16.4.1",
