--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kuna-ticker",
-    "version": "1.6.1",
+    "version": "1.7.0",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -15,9 +15,10 @@
         "make-third-party": "npm run make-third-party:1 && npm run make-third-party:2",
         "configure-app": "npm install && react-native link && npm run make-third-party",
         "postversion": "react-native-version",
-        "postinstall": "rn-nodeify --install stream-browserify,react-native-crypto,events,vm-browserify,process --hack"
+        "postinstall": "rn-nodeify --install stream,crypto,events,vm,process --hack"
     },
     "dependencies": {
+        "@react-native-community/async-storage": "^1.3.3",
         "axios": "0.18.0",
         "bignumber.js": "8.0.1",
         "cryptocurrency-icons": "0.10.1",
@@ -43,18 +44,17 @@
         "react-native-rate": "1.1.6",
         "react-native-splash-screen": "3.1.1",
         "react-native-super-grid": "2.4.3",
-        "react-native-svg": "6.5.2",
+        "react-native-svg": "9.4.0",
         "react-native-svg-charts": "5.2.0",
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.3.0",
         "react-native-vector-icons": "6.4.2",
         "react-navigation": "2.12.1",
-        "react-redux": "5.0.7",
         "react-router": "4.3.1",
         "react-router-native": "4.3.0",
+        "readable-stream": "1.0.33",
         "recompose": "0.28.2",
         "recyclerlistview": "1.3.4",
-        "redux": "4.0.0",
         "rn-nodeify": "10.0.1",
         "sjcl": "1.0.8",
         "stream-browserify": "1.0.0",
@@ -75,10 +75,8 @@
         "@types/react-native-tab-view": "1.0.2",
         "@types/react-native-vector-icons": "6.4.0",
         "@types/react-navigation": "2.0.19",
-        "@types/react-redux": "6.0.6",
         "@types/react-router-native": "4.2.4",
         "@types/recompose": "0.26.4",
-        "@types/redux": "3.6.0",
         "@types/sjcl": "1.0.28",
         "@types/yup": "0.26.4",
         "babel-jest": "23.4.2",
@@ -103,5 +101,25 @@
         "assets": [
             "./assets/fonts"
         ]
+    },
+    "react-native": {
+        "crypto": "react-native-crypto",
+        "_stream_transform": "readable-stream/transform",
+        "_stream_readable": "readable-stream/readable",
+        "_stream_writable": "readable-stream/writable",
+        "_stream_duplex": "readable-stream/duplex",
+        "_stream_passthrough": "readable-stream/passthrough",
+        "stream": "stream-browserify",
+        "vm": "vm-browserify"
+    },
+    "browser": {
+        "crypto": "react-native-crypto",
+        "_stream_transform": "readable-stream/transform",
+        "_stream_readable": "readable-stream/readable",
+        "_stream_writable": "readable-stream/writable",
+        "_stream_duplex": "readable-stream/duplex",
+        "_stream_passthrough": "readable-stream/passthrough",
+        "stream": "stream-browserify",
+        "vm": "vm-browserify"
     }
 }
