--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
         "postinstall": "rn-nodeify --install stream,crypto,events,vm,process --hack"
     },
     "dependencies": {
-        "@react-native-community/async-storage": "^1.3.3",
+        "@react-native-community/async-storage": "1.3.3",
         "axios": "0.18.0",
         "bignumber.js": "8.0.1",
         "cryptocurrency-icons": "0.10.1",
+        "events": "^1.1.1",
         "formik": "1.4.2",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.11",
@@ -31,6 +32,7 @@
         "moment": "2.23.0",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
+        "process": "^0.11.10",
         "react": "16.8.3",
         "react-native": "0.59.5",
         "react-native-crypto": "2.1.2",
@@ -43,6 +45,7 @@
         "react-native-randombytes": "3.5.2",
         "react-native-rate": "1.1.6",
         "react-native-splash-screen": "3.1.1",
+        "react-native-spring-scrollview": "2.0.20",
         "react-native-super-grid": "2.4.3",
         "react-native-svg": "9.4.0",
         "react-native-svg-charts": "5.2.0",
