--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,21 +179,22 @@ dependencies {
     implementation project(':react-native-randombytes')
     implementation project(':react-native-firebase')
     implementation project(':react-native-device-info')
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-spring-scroll-view')
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true
     }
-
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation "com.google.android.gms:play-services-base:16.0.1"
-    implementation "com.google.firebase:firebase-core:16.0.6"
-    implementation "com.google.firebase:firebase-perf:16.0.0"
-    implementation "com.google.firebase:firebase-config:16.1.2"
-    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
+    implementation "com.google.firebase:firebase-perf:17.0.0"
+    implementation "com.google.firebase:firebase-config:17.0.0"
+    implementation "com.google.firebase:firebase-messaging:18.0.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
-    implementation "com.google.firebase:firebase-ads:16.0.1"
+    implementation 'com.google.firebase:firebase-ads:17.2.0'
 }
 
 // Run this once to be able to run the application with BUCK
