--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,9 +11,9 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'com.google.firebase:firebase-plugins:1.1.5'
+        classpath 'com.google.firebase:perf-plugin:1.2.1'
         classpath 'io.fabric.tools:gradle:1.25.4'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -43,9 +43,9 @@ allprojects {
 }
 
 ext {
-    buildToolsVersion = "27.0.3"
-    minSdkVersion = 16
-    compileSdkVersion = 26
-    targetSdkVersion = 26
+    minSdkVersion = 21
+    compileSdkVersion = 28
+    targetSdkVersion = 28
+    buildToolsVersion = "27.1.0"
     supportLibVersion = "27.1.0"
 }
