--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -15,5 +15,10 @@ include ':react-native-firebase'
 project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
 include ':react-native-device-info'
 project(':react-native-device-info').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
+include ':@react-native-community_async-storage'
+project(':@react-native-community_async-storage').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/async-storage/android')
+include ':react-native-spring-scroll-view'
+project(':react-native-spring-scroll-view').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spring-scrollview/android')
+
 
 include ':app'
