--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kuna-ticker",
-    "version": "1.7.0",
+    "version": "1.8.0",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -35,7 +35,7 @@
         "react-native-crypto": "2.1.2",
         "react-native-device-info": "1.5.0",
         "react-native-firebase": "5.2.2",
-        "react-native-gesture-handler": "1.1.0",
+        "react-native-gesture-handler": "1.2.1",
         "react-native-languages": "3.0.1",
         "react-native-level-fs": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
@@ -49,7 +49,8 @@
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.3.0",
         "react-native-vector-icons": "6.4.2",
-        "react-navigation": "2.12.1",
+        "react-navigation": "3.11.0",
+        "react-navigation-stack": "1.4.0",
         "react-router": "4.3.1",
         "react-router-native": "4.3.0",
         "readable-stream": "1.0.33",
