--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "axios": "0.18.0",
         "bignumber.js": "8.0.1",
         "cryptocurrency-icons": "0.10.1",
-        "events": "^1.1.1",
-        "formik": "1.4.2",
+        "events": "3.0.0",
+        "formik": "1.5.7",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.13",
         "lodash": "4.17.10",
@@ -29,17 +29,17 @@
         "moment": "2.23.0",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
-        "process": "^0.11.10",
-        "react": "16.8.3",
-        "react-native": "0.59.5",
+        "process": "0.11.10",
+        "react": "16.8.6",
+        "react-native": "0.59.8",
         "react-native-crypto": "2.1.2",
-        "react-native-device-info": "1.5.0",
-        "react-native-firebase": "5.2.2",
+        "react-native-device-info": "2.0.1",
+        "react-native-firebase": "5.3.1",
         "react-native-gesture-handler": "1.2.1",
-        "react-native-languages": "3.0.1",
+        "react-native-languages": "3.0.2",
         "react-native-level-fs": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
-        "react-native-randombytes": "3.5.2",
+        "react-native-randombytes": "3.5.3",
         "react-native-rate": "1.1.6",
         "react-native-splash-screen": "3.1.1",
         "react-native-spring-scrollview": "2.0.20",
@@ -83,15 +83,15 @@
         "babel-jest": "23.4.2",
         "babel-plugin-module-alias": "1.6.0",
         "babel-plugin-module-resolver": "3.2.0",
-        "babel-plugin-transform-remove-console": "^6.9.4",
+        "babel-plugin-transform-remove-console": "6.9.4",
         "babel-preset-react-native": "5.0.2",
-        "jest": "^24.7.1",
+        "jest": "24.8.0",
         "jsc-android": "236355.1.1",
-        "metro-react-native-babel-preset": "^0.53.1",
-        "react-native-mock-render": "^0.1.2",
-        "react-native-typescript-transformer": "1.2.10",
+        "metro-react-native-babel-preset": "0.54.1",
+        "react-native-mock-render": "0.1.2",
+        "react-native-typescript-transformer": "1.2.12",
         "react-native-version": "2.6.6",
-        "react-test-renderer": "16.4.1",
+        "react-test-renderer": "16.8.6",
         "ts-jest": "23.1.3",
         "typescript": "3.0.1"
     },
