--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kuna-ticker",
-    "version": "1.9.0",
+    "version": "1.10.0",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -12,7 +12,7 @@
         "build:android": "npm run bundle:android && cd android && ./gradlew assembleRelease",
         "configure-app": "npm install && react-native link && npm run make-third-party",
         "postversion": "react-native-version",
-        "postinstall": "rn-nodeify --install stream,crypto,events,vm,process --hack"
+        "postinstall": "rn-nodeify --install stream,crypto,events,vm,process --hack && node scripts/react-scrollview-fix.js"
     },
     "dependencies": {
         "@react-native-community/async-storage": "1.3.3",
@@ -22,16 +22,17 @@
         "events": "3.0.0",
         "formik": "1.5.7",
         "i18n-js": "3.1.0",
-        "kuna-sdk": "0.4.3",
+        "kuna-sdk": "0.4.19",
         "lodash": "4.17.10",
         "mobx": "5.8.0",
-        "mobx-react": "5.4.3",
+        "mobx-react": "6.1.3",
+        "mobx-react-lite": "1.4.1",
         "moment": "2.23.0",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "process": "0.11.10",
-        "react": "16.8.6",
-        "react-native": "0.59.10",
+        "react": "16.11.0",
+        "react-native": "0.61.4",
         "react-native-crypto": "2.1.2",
         "react-native-device-info": "2.0.1",
         "react-native-emoji": "1.8.0",
@@ -41,12 +42,13 @@
         "react-native-level-fs": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
         "react-native-randombytes": "3.5.3",
-        "react-native-rate": "1.1.6",
+        "react-native-rate": "1.1.10",
+        "react-navigation-hooks": "1.1.0",
         "react-native-splash-screen": "3.2.0",
-        "react-native-spring-scrollview": "2.0.20",
+        "react-native-spring-scrollview": "2.0.23",
         "react-native-super-grid": "2.4.3",
-        "react-native-svg": "9.4.0",
-        "react-native-svg-charts": "5.2.0",
+        "react-native-svg": "9.13.3",
+        "react-native-svg-charts": "5.3.0",
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.3.0",
         "react-native-vector-icons": "6.4.2",
@@ -64,9 +66,10 @@
         "yup": "0.27.0"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-decorators": "7.2.3",
-        "@babel/plugin-transform-runtime": "7.4.3",
-        "@babel/runtime": "7.4.3",
+        "@babel/core": "7.5.0",
+        "@babel/plugin-proposal-decorators": "7.6.0",
+        "@babel/plugin-transform-runtime": "7.5.0",
+        "@babel/runtime": "7.5.0",
         "@types/es6-promise": "3.3.0",
         "@types/i18n-js": "3.0.1",
         "@types/lodash": "4.14.116",
@@ -90,13 +93,13 @@
         "babel-preset-react-native": "5.0.2",
         "jest": "24.8.0",
         "jsc-android": "236355.1.1",
-        "metro-react-native-babel-preset": "0.54.1",
-        "react-native-mock-render": "0.1.2",
-        "react-native-typescript-transformer": "1.2.12",
-        "react-native-version": "2.6.7",
-        "react-test-renderer": "16.8.6",
+        "metro-react-native-babel-preset": "0.57.0",
+        "react-native-mock-render": "0.1.6",
+        "react-native-typescript-transformer": "1.2.13",
+        "react-native-version": "3.2.0",
+        "react-test-renderer": "16.10.2",
         "ts-jest": "23.10.1",
-        "typescript": "3.0.1"
+        "typescript": "3.6.4"
     },
     "jest": {
         "preset": "react-native"
